# Kalkulator-dla-biegaczy

./: .env.example  .gitignore  .pre-commit-config.yaml  BUG_FIXES.md  CHANGELOG.md  CONTRIBUTING.md  INSTRUKCJA_VSCODE.md  NAPRAWA_NAMEERROR.md  NAPRAWA_OPENAI.md  PACKAGE_INSTALLATION.md  PODSUMOWANIE_NAPRAW.md  README.md  WSKAZOWKI_DO_NAPRAWY.txt  app.py  app_beckup.py  config.py  df_cleaned.csv  huber_model_halfmarathon_time.pkl  monitorowanie_modeli__langfuse.ipynb  pyproject.toml  pyrightconfig.json  readme.txt  requirements-dev.txt  requirements.txt  trenowanie_modelu.ipynb
.github/workflows/: tests.yml
.streamlit/: config.toml  secrets.toml.example
dane/: halfmarathon_2023.csv  halfmarathon_2024.csv
dev_notebooks/: trenowanie_modelu.ipynb
docs/: BUG_FIXES.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  FINALNE_PODSUMOWANIE.md  PROJEKT_WYCZYSZCZONY.md
src/: __init__.py
src/utils/: __init__.py  data_processing.py  model_utils.py  validation.py  visualization.py
tests/: test_validation.py
